tests/neg/transparent-override/A_1.scala
abstract class A {
   def f(x: Int): Int
   transparent def g(x: Int): Int = x
}



